--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "phase-mobile",
+  "name": "@lightyears1998/day-primer-mobile",
   "version": "0.0.1",
   "private": true,
   "scripts": {
